--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "mongodb": "4.1",
     "mongodb-legacy": "^5.0.0",
     "mongoose": "^6.10.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^2.0.22"
   }
 }
