--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.17.0"
+  },  
   "dependencies": {
     "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
